--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0486.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0486.html
@@ -69,16 +69,11 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1749 296 1912 380" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατα-</ins>
+            <ins title="nlp 2.00">κατατροπωσάμενον·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 201 383 1892 452">
-        <span id="w_12" class="ocr_word" title="bbox 201 384 605 447" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τροπωσάμενον·</ins>
-          </span>
-        </span>
         <span id="w_13" class="ocr_word" title="bbox 647 404 737 448" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -309,16 +304,11 @@
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1715 696 1888 746" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καλού-</ins>
+            <ins title="nlp 2.00">καλούμενον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 194 768 1916 844">
-        <span id="w_60" class="ocr_word" title="bbox 194 791 346 837" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενον</ins>
-          </span>
-        </span>
         <span id="w_61" class="ocr_word" title="bbox 383 791 469 821" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -828,16 +818,11 @@
         </span>
         <span id="w_159" class="ocr_word" title="bbox 1576 1622 1890 1675" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπεισπεσόν-</ins>
+            <ins title="nlp 2.00">ἐπεισπεσόντες</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 190 1698 1891 1768">
-        <span id="w_160" class="ocr_word" title="bbox 190 1723 266 1764" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τες</ins>
-          </span>
-        </span>
         <span id="w_161" class="ocr_word" title="bbox 322 1698 419 1754" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
@@ -1152,16 +1137,11 @@
         </span>
         <span id="w_221" class="ocr_word" title="bbox 1806 2186 1887 2233" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γε-</ins>
+            <ins title="nlp 2.00">γεγονώς,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 187 2242 1887 2312">
-        <span id="w_222" class="ocr_word" title="bbox 187 2247 363 2312" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γονώς,</ins>
-          </span>
-        </span>
         <span id="w_223" class="ocr_word" title="bbox 401 2249 741 2311" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτομολήσας</ins>
