--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0487.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0487.html
@@ -40,7 +40,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 232 298 559 366" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεντήκοντα</ins>
+            <ins title="nlp 2.00">(πεντήκοντα</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 587 300 641 349" lang="grc">
@@ -226,16 +226,11 @@
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1631 535 1803 588" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἰσθό-</ins>
+            <ins title="nlp 2.00">αἰσθόμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 112 607 1847 683">
-        <span id="w_42" class="ocr_word" title="bbox 112 627 258 672" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενος</ins>
-          </span>
-        </span>
         <span id="w_43" class="ocr_word" title="bbox 297 607 547 674" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐλεύσεως,</ins>
@@ -1393,9 +1388,9 @@
             <ins class="alt" title="nlp 1.00">σκοποί</ins>
           </span>
         </span>
-        <span id="w_269" class="ocr_word" title="bbox 1647 2621 1793 2690" lang="grc">
+        <span id="w_269_0" class="ocr_word" title="bbox 1647 2621 1793 2690">
           <span class="alternatives">
-            <ins title="nlp 2.00">(βάρβαροι</ins>
+            <ins class="alt" title="nlp 2.00">(βάρβαροι</ins>
           </span>
         </span>
       </span>
@@ -1437,16 +1432,11 @@
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1444 2699 1794 2765" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπανατρέχου-</ins>
+            <ins title="nlp 2.00">ἐπανατρέχουσιν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 102 2776 1795 2848">
-        <span id="w_278" class="ocr_word" title="bbox 102 2795 183 2833" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σιν</ins>
-          </span>
-        </span>
         <span id="w_279" class="ocr_word" title="bbox 229 2779 549 2841" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀσυντάκτως</ins>
