--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0488.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0488.html
@@ -499,16 +499,11 @@
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1746 1112 1898 1142" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατα-</ins>
+            <ins title="nlp 2.00">καταλιπεῖν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 200 1169 1898 1237">
-        <span id="w_95" class="ocr_word" title="bbox 200 1178 363 1224" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λιπεῖν</ins>
-          </span>
-        </span>
         <span id="w_96" class="ocr_word" title="bbox 400 1178 499 1232" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
@@ -551,16 +546,11 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1805 1189 1898 1219" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐ-</ins>
+            <ins title="nlp 2.00">αὐτὰς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 200 1245 1897 1316">
-        <span id="w_105" class="ocr_word" title="bbox 200 1245 286 1310" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰς</ins>
-          </span>
-        </span>
         <span id="w_106" class="ocr_word" title="bbox 326 1253 558 1316" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐμβαλεῖν</ins>
@@ -588,16 +578,11 @@
         </span>
         <span id="w_111" class="ocr_word" title="bbox 1740 1265 1897 1314" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρα-</ins>
+            <ins title="nlp 2.00">παραχρῆμα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 201 1324 1895 1395">
-        <span id="w_112" class="ocr_word" title="bbox 201 1336 361 1395" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρῆμα</ins>
-          </span>
-        </span>
         <span id="w_113" class="ocr_word" title="bbox 415 1335 541 1394" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γοῦν</ins>
@@ -781,16 +766,11 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1713 1555 1896 1607" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναπο-</ins>
+            <ins title="nlp 2.00">ἀναποδίσας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 201 1634 1900 1702">
-        <span id="w_149" class="ocr_word" title="bbox 201 1639 343 1697" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δίσας</ins>
-          </span>
-        </span>
         <span id="w_150" class="ocr_word" title="bbox 391 1635 569 1702" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μικρὸν</ins>
