--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0489.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0489.html
@@ -332,16 +332,11 @@
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1519 765 1805 832" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θωρακισά-</ins>
+            <ins title="nlp 2.00">θωρακισάμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 106 837 1806 909">
-        <span id="w_63" class="ocr_word" title="bbox 106 858 252 904" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενος</ins>
-          </span>
-        </span>
         <span id="w_64" class="ocr_word" title="bbox 290 839 373 889" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1131,19 +1126,19 @@
             <ins class="alt" title="nlp 1.00">αὐτόν</ins>
           </span>
         </span>
-        <span id="w_215" class="ocr_word" title="bbox 1497 2156 1709 2226" lang="grc">
+        <span id="w_215_0" class="ocr_word" title="bbox 1497 2156 1709 2226">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἀλανοὶ</ins>
+            <ins class="alt" title="nlp 2.00">(Ἀλανοὶ</ins>
+          </span>
+        </span>
+        <span id="w_215_1" class="ocr_word" title="bbox 1497 2156 1709 2226">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_216" class="ocr_word" title="bbox 1747 2159 1802 2206" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_217" class="ocr_word" title="bbox 1824 2179 1865 2211">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">25</ins>
           </span>
         </span>
       </span>
@@ -1190,16 +1185,11 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1723 2234 1802 2283" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπ-</ins>
+            <ins title="nlp 2.00">ἐπέτρεψεν.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 106 2311 1801 2383">
-        <span id="w_227" class="ocr_word" title="bbox 106 2317 326 2383" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">έτρεψεν.</ins>
-          </span>
-        </span>
         <span id="w_228" class="ocr_word" title="bbox 402 2314 523 2366" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
