--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0437.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0437.html
@@ -1349,9 +1349,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_265" class="ocr_word" title="bbox 1646 2453 1826 2503" lang="grc">
+        <span id="w_265_0" class="ocr_word" title="bbox 1646 2453 1826 2503">
           <span class="alternatives">
-            <ins title="nlp 2.00">σχήμα-</ins>
+            <ins class="alt" title="nlp 2.00">σχήματος</ins>
           </span>
         </span>
       </span>
@@ -1359,11 +1359,6 @@
         <span id="w_266" class="ocr_word" title="bbox 93 2541 124 2572">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_267" class="ocr_word" title="bbox 147 2537 225 2577" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τος</ins>
           </span>
         </span>
         <span id="w_268" class="ocr_word" title="bbox 269 2537 353 2568" lang="grc">
@@ -1502,9 +1497,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 143 2828 1629 2895">
-        <span id="w_294" class="ocr_word" title="bbox 143 2839 322 2882">
+        <span id="w_294_0" class="ocr_word" title="bbox 143 2839 322 2882">
           <span class="alternatives">
-            <ins title="nlp 2.00">malim’</ins>
+            <ins class="alt" title="nlp 2.00">malim’</ins>
+          </span>
+        </span>
+        <span id="w_294_1" class="ocr_word" title="bbox 143 2839 322 2882">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_295" class="ocr_word" title="bbox 356 2839 566 2883">
@@ -1525,11 +1525,6 @@
         <span id="w_298" class="ocr_word" title="bbox 1361 2855 1563 2894" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">χρήματι</ins>
-          </span>
-        </span>
-        <span id="w_299" class="ocr_word" title="bbox 1598 2839 1629 2882">
-          <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
