--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0490.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0490.html
@@ -341,23 +341,18 @@
             <ins class="alt" title="nlp 1.00">λόγου</ins>
           </span>
         </span>
-        <span id="w_64" class="ocr_word" title="bbox 1742 825 1896 892" lang="grc">
+        <span id="w_64_0" class="ocr_word" title="bbox 1742 825 1896 892">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπορ-</ins>
+            <ins class="alt" title="nlp 2.00">ἀπορρέοντος.</ins>
           </span>
         </span>
-        <span id="w_65" class="ocr_word" title="bbox 1921 842 1948 877">
+        <span id="w_64_1" class="ocr_word" title="bbox 1742 825 1896 892">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 197 902 1900 974">
-        <span id="w_66" class="ocr_word" title="bbox 197 909 409 974" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ῥέοντος.</ins>
-          </span>
-        </span>
         <span id="w_67" class="ocr_word" title="bbox 473 925 597 956" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅπου</ins>
@@ -662,16 +657,11 @@
         </span>
         <span id="w_127" class="ocr_word" title="bbox 1626 1369 1901 1422" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπιλειπόν-</ins>
+            <ins title="nlp 2.00">ἐπιλειπόντων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 196 1447 1898 1515">
-        <span id="w_128" class="ocr_word" title="bbox 196 1470 294 1499" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">των</ins>
-          </span>
-        </span>
         <span id="w_129" class="ocr_word" title="bbox 332 1450 428 1515" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἤδη</ins>
@@ -699,16 +689,11 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1755 1450 1898 1515" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στρά-</ins>
+            <ins title="nlp 2.00">στράπευμα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 198 1525 1958 1594">
-        <span id="w_135" class="ocr_word" title="bbox 198 1548 350 1593" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τευμα</ins>
-          </span>
-        </span>
         <span id="w_136" class="ocr_word" title="bbox 397 1545 517 1594" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
