--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0438.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0438.html
@@ -474,14 +474,14 @@
             <ins class="alt" title="nlp 1.00">βαρβαρικούς</ins>
           </span>
         </span>
-        <span id="w_89" class="ocr_word" title="bbox 1681 909 1859 972" lang="grc">
+        <span id="w_89_0" class="ocr_word" title="bbox 1681 909 1859 972">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐμβαλ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐμβαλλόμενος.</ins>
           </span>
         </span>
-        <span id="w_90" class="ocr_word" title="bbox 1883 922 1911 957">
+        <span id="w_89_1" class="ocr_word" title="bbox 1681 909 1859 972">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -489,11 +489,6 @@
         <span id="w_91" class="ocr_word" title="bbox 102 1010 142 1041">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">10</ins>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 166 985 386 1050" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λόμενος.</ins>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 461 982 582 1033" lang="grc">
