--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0491.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0491.html
@@ -196,16 +196,11 @@
         </span>
         <span id="w_35" class="ocr_word" title="bbox 1568 561 1788 609" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατεκλί-</ins>
+            <ins title="nlp 2.00">κατεκλίθησαν,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 90 622 1832 702">
-        <span id="w_36" class="ocr_word" title="bbox 90 628 287 689" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θησαν,</ins>
-          </span>
-        </span>
         <span id="w_37" class="ocr_word" title="bbox 333 622 486 674" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
@@ -547,16 +542,11 @@
         </span>
         <span id="w_102" class="ocr_word" title="bbox 1606 1176 1786 1239" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαφό-</ins>
+            <ins title="nlp 2.00">διαφόροις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 85 1246 1788 1315">
-        <span id="w_103" class="ocr_word" title="bbox 85 1265 186 1313" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ροις</ins>
-          </span>
-        </span>
         <span id="w_104" class="ocr_word" title="bbox 236 1246 470 1312" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐξέπεμπε</ins>
@@ -1056,16 +1046,11 @@
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1662 2122 1780 2169" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πυγ-</ins>
+            <ins title="nlp 2.00">πυγμαῖον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 80 2178 1843 2247">
-        <span id="w_201" class="ocr_word" title="bbox 80 2187 229 2245" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μαῖον</ins>
-          </span>
-        </span>
         <span id="w_202" class="ocr_word" title="bbox 277 2178 495 2246" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Σκύθην</ins>
@@ -1192,16 +1177,11 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1642 2336 1778 2398" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βασι-</ins>
+            <ins title="nlp 2.00">βασιλικοῦ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 81 2410 1778 2482">
-        <span id="w_227" class="ocr_word" title="bbox 81 2419 222 2465" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λικοῦ</ins>
-          </span>
-        </span>
         <span id="w_228" class="ocr_word" title="bbox 259 2416 574 2481" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προκαθίσας</ins>
