--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0439.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0439.html
@@ -462,23 +462,18 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_86" class="ocr_word" title="bbox 1653 1697 1799 1727" lang="grc">
+        <span id="w_86_0" class="ocr_word" title="bbox 1653 1697 1799 1727">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτο-</ins>
+            <ins class="alt" title="nlp 2.00">αὐτοκράτορι,</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 1827 1702 1866 1734">
+        <span id="w_86_1" class="ocr_word" title="bbox 1653 1697 1799 1727">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 110 1750 1801 1821">
-        <span id="w_88" class="ocr_word" title="bbox 110 1754 326 1820" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κράτορι,</ins>
-          </span>
-        </span>
         <span id="w_89" class="ocr_word" title="bbox 367 1750 522 1803" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁπόσα</ins>
@@ -635,9 +630,9 @@
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_120" class="ocr_word" title="bbox 1711 1987 1801 2052" lang="grc">
+        <span id="w_120_0" class="ocr_word" title="bbox 1711 1987 1801 2052">
           <span class="alternatives">
-            <ins title="nlp 2.00">κή-</ins>
+            <ins class="alt" title="nlp 2.00">κήδους</ins>
           </span>
         </span>
       </span>
@@ -645,11 +640,6 @@
         <span id="w_121" class="ocr_word" title="bbox 27 2086 86 2121" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">346</ins>
-          </span>
-        </span>
-        <span id="w_122" class="ocr_word" title="bbox 111 2066 228 2125" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δοὺς</ins>
           </span>
         </span>
         <span id="w_123" class="ocr_word" title="bbox 267 2085 330 2114" lang="grc">
