--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0441.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0441.html
@@ -147,9 +147,9 @@
             <ins class="alt" title="nlp 1.00">ὕδατος</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 1570 498 1808 559" lang="grc">
+        <span id="w_27_0" class="ocr_word" title="bbox 1570 498 1808 559">
           <span class="alternatives">
-            <ins title="nlp 2.00">μεταλαμ-</ins>
+            <ins class="alt" title="nlp 2.00">μεταλαμβάνοντες,</ins>
           </span>
         </span>
       </span>
@@ -157,11 +157,6 @@
         <span id="w_28" class="ocr_word" title="bbox 54 581 86 614" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_29" class="ocr_word" title="bbox 108 563 347 633" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">βάνοντες,</ins>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 431 567 669 631" lang="grc">
@@ -441,23 +436,18 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_86" class="ocr_word" title="bbox 1596 1049 1806 1099" lang="grc">
+        <span id="w_86_0" class="ocr_word" title="bbox 1596 1049 1806 1099">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑποσχέ-</ins>
+            <ins class="alt" title="nlp 2.00">ὑποσχέσεων,</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 1832 1059 1872 1091">
+        <span id="w_86_1" class="ocr_word" title="bbox 1596 1049 1806 1099">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 108 1109 1811 1176">
-        <span id="w_88" class="ocr_word" title="bbox 108 1127 252 1176" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σέων,</ins>
-          </span>
-        </span>
         <span id="w_89" class="ocr_word" title="bbox 292 1130 383 1175" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -1383,9 +1373,9 @@
             <ins class="alt" title="nlp 1.00">δωρεὰς</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1707 2677 1806 2708" lang="grc">
+        <span id="w_268_0" class="ocr_word" title="bbox 1707 2677 1806 2708">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπι-</ins>
+            <ins class="alt" title="nlp 2.00">ἐπιχορηγήσας</ins>
           </span>
         </span>
       </span>
@@ -1393,11 +1383,6 @@
         <span id="w_269" class="ocr_word" title="bbox 5 2764 91 2804">
           <span class="alternatives">
             <ins title="nlp 2.00">348</ins>
-          </span>
-        </span>
-        <span id="w_270" class="ocr_word" title="bbox 116 2739 390 2809" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χορηγήσας</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 428 2740 599 2802" lang="grc">
