--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0492.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0492.html
@@ -566,9 +566,9 @@
             <ins class="alt" title="nlp 1.00">ἀποκναίοντος</ins>
           </span>
         </span>
-        <span id="w_107" class="ocr_word" title="bbox 1729 1246 1921 1312" lang="grc">
+        <span id="w_107_0" class="ocr_word" title="bbox 1729 1246 1921 1312">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οἰηματίας</ins>
+            <ins class="alt" title="nlp 2.00">(oἰηματίας</ins>
           </span>
         </span>
       </span>
