--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0443.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0443.html
@@ -256,23 +256,18 @@
             <ins class="alt" title="nlp 1.00">πυρὸς</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 1681 658 1804 706" lang="grc">
+        <span id="w_47_0" class="ocr_word" title="bbox 1681 658 1804 706">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρ-</ins>
+            <ins class="alt" title="nlp 2.00">παρεμφαίνων</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 1829 661 1849 693">
+        <span id="w_47_1" class="ocr_word" title="bbox 1681 658 1804 706">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 102 710 1806 781">
-        <span id="w_49" class="ocr_word" title="bbox 102 712 362 775" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐμφαίνων</ins>
-          </span>
-        </span>
         <span id="w_50" class="ocr_word" title="bbox 398 710 457 759" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τά</ins>
@@ -1316,23 +1311,18 @@
             <ins class="alt" title="nlp 1.00">ξυνάπτουσι.</ins>
           </span>
         </span>
-        <span id="w_255" class="ocr_word" title="bbox 1594 2592 1778 2640" lang="grc">
+        <span id="w_255_0" class="ocr_word" title="bbox 1594 2592 1778 2640">
           <span class="alternatives">
-            <ins title="nlp 2.00">πρειερ-</ins>
+            <ins class="alt" title="nlp 2.00">περιερρεῖτο</ins>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 1802 2589 1844 2622">
+        <span id="w_255_1" class="ocr_word" title="bbox 1594 2592 1778 2640">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 86 2651 1778 2719">
-        <span id="w_257" class="ocr_word" title="bbox 86 2658 212 2719" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ρεῖτο</ins>
-          </span>
-        </span>
         <span id="w_258" class="ocr_word" title="bbox 259 2654 430 2703" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοίνυν</ins>
