--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0222.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0222.html
@@ -1003,9 +1003,9 @@
             <ins class="alt" title="nlp 2.00">ἑαυτῷ</ins>
           </span>
         </span>
-        <span id="w_197_1" class="ocr_word" title="bbox 1616 2107 1774 2137">
+        <span id="w_197_1_0" class="ocr_word" title="bbox 1616 2107 1774 2137">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
