--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0493.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0493.html
@@ -221,9 +221,14 @@
             <ins class="alt" title="nlp 1.00">ἄνεμον</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 1109 610 1215 676" lang="grc">
+        <span id="w_41_0" class="ocr_word" title="bbox 1109 610 1215 676">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_41_1" class="ocr_word" title="bbox 1109 610 1215 676">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 1255 632 1346 677" lang="grc">
@@ -244,11 +249,6 @@
         <span id="w_45" class="ocr_word" title="bbox 1660 632 1814 679" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εὐρεῖς</ins>
-          </span>
-        </span>
-        <span id="w_46" class="ocr_word" title="bbox 1837 633 1857 664">
-          <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -839,14 +839,14 @@
             <ins class="alt" title="nlp 1.00">ἐπεραίνετο</ins>
           </span>
         </span>
-        <span id="w_161" class="ocr_word" title="bbox 1580 1695 1685 1756" lang="grc">
+        <span id="w_161_0" class="ocr_word" title="bbox 1580 1695 1685 1756">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 1721 1692 1813 1760" lang="grc">
+        <span id="w_161_1" class="ocr_word" title="bbox 1580 1695 1685 1756">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
