--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0444.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0444.html
@@ -583,16 +583,11 @@
         </span>
         <span id="w_112" class="ocr_word" title="bbox 1786 1279 1922 1326" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περι-</ins>
+            <ins title="nlp 2.00">περιβόητον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 213 1336 1924 1407">
-        <span id="w_113" class="ocr_word" title="bbox 213 1339 401 1406" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βόητον</ins>
-          </span>
-        </span>
         <span id="w_114" class="ocr_word" title="bbox 448 1337 601 1388" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πολλὰ</ins>
@@ -687,16 +682,11 @@
         </span>
         <span id="w_132" class="ocr_word" title="bbox 1838 1419 1924 1483" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βα-</ins>
+            <ins title="nlp 2.00">βασιλικοῦ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 224 1489 1926 1560">
-        <span id="w_133" class="ocr_word" title="bbox 224 1499 416 1543" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σιλικοῦ</ins>
-          </span>
-        </span>
         <span id="w_134" class="ocr_word" title="bbox 440 1489 769 1559" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καταγόμενος</ins>
@@ -858,9 +848,9 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 1778 1727 1922 1778" lang="grc">
+        <span id="w_165_0" class="ocr_word" title="bbox 1778 1727 1922 1778">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτο-</ins>
+            <ins class="alt" title="nlp 2.00">αὐτοκράτωρ</ins>
           </span>
         </span>
       </span>
@@ -868,11 +858,6 @@
         <span id="w_166" class="ocr_word" title="bbox 159 1823 204 1856">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">20</ins>
-          </span>
-        </span>
-        <span id="w_167" class="ocr_word" title="bbox 225 1804 420 1871" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κράτωρ</ins>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 457 1823 544 1853" lang="grc">
@@ -1093,9 +1078,9 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_210" class="ocr_word" title="bbox 1662 2116 1924 2181" lang="grc">
+        <span id="w_210_0" class="ocr_word" title="bbox 1662 2116 1924 2181">
           <span class="alternatives">
-            <ins title="nlp 2.00">καιριωτά-</ins>
+            <ins class="alt" title="nlp 2.00">καιριωτάτην</ins>
           </span>
         </span>
       </span>
@@ -1103,11 +1088,6 @@
         <span id="w_211" class="ocr_word" title="bbox 159 2214 200 2245">
           <span class="alternatives">
             <ins title="nlp 2.00">25</ins>
-          </span>
-        </span>
-        <span id="w_212" class="ocr_word" title="bbox 223 2209 315 2254" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">την</ins>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 352 2195 547 2257" lang="grc">
