--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0223.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0223.html
@@ -1457,9 +1457,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 185 2875 1758 2936">
-        <span id="w_280" class="ocr_word" title="bbox 185 2880 210 2918">
+        <span id="w_280_0" class="ocr_word" title="bbox 185 2880 210 2918">
           <span class="alternatives">
-            <ins title="nlp 2.00">6</ins>
+            <ins class="alt" title="nlp 2.00">6</ins>
+          </span>
+        </span>
+        <span id="w_280_1" class="ocr_word" title="bbox 185 2880 210 2918">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἔτι</ins>
           </span>
         </span>
         <span id="w_282" class="ocr_word" title="bbox 333 2891 406 2920">
