--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0445.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0445.html
@@ -261,23 +261,18 @@
             <ins class="alt" title="nlp 1.00">ἀξιόμαχον</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 1658 677 1802 729" lang="grc">
+        <span id="w_48_0" class="ocr_word" title="bbox 1658 677 1802 729">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρα-</ins>
+            <ins class="alt" title="nlp 2.00">στρατηγὸν</ins>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 1829 679 1850 711">
+        <span id="w_48_1" class="ocr_word" title="bbox 1658 677 1802 729">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 101 732 1804 807">
-        <span id="w_50" class="ocr_word" title="bbox 101 754 254 800" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τηγὸν</ins>
-          </span>
-        </span>
         <span id="w_51" class="ocr_word" title="bbox 289 732 571 784" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀποστέλλει</ins>
@@ -466,23 +461,18 @@
             <ins class="alt" title="nlp 1.00">ἐντειλάμενος</ins>
           </span>
         </span>
-        <span id="w_88" class="ocr_word" title="bbox 1698 1069 1802 1100" lang="grc">
+        <span id="w_88_0" class="ocr_word" title="bbox 1698 1069 1802 1100">
           <span class="alternatives">
-            <ins title="nlp 2.00">ποι-</ins>
+            <ins class="alt" title="nlp 2.00">κοιεῖσθαι.</ins>
           </span>
         </span>
-        <span id="w_89" class="ocr_word" title="bbox 1829 1076 1871 1107" lang="grc">
+        <span id="w_88_1" class="ocr_word" title="bbox 1698 1069 1802 1100">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 100 1123 1806 1192">
-        <span id="w_90" class="ocr_word" title="bbox 100 1130 284 1175" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εῖσθαι.</ins>
-          </span>
-        </span>
         <span id="w_91" class="ocr_word" title="bbox 361 1125 409 1174" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τί</ins>
@@ -634,9 +624,9 @@
             <ins class="alt" title="nlp 1.00">ὅλως</ins>
           </span>
         </span>
-        <span id="w_121" class="ocr_word" title="bbox 1729 1381 1807 1411" lang="grc">
+        <span id="w_121_0" class="ocr_word" title="bbox 1729 1381 1807 1411">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐν-</ins>
+            <ins class="alt" title="nlp 2.00">ἐνδιατρίβειν</ins>
           </span>
         </span>
       </span>
@@ -644,11 +634,6 @@
         <span id="w_122" class="ocr_word" title="bbox 16 1450 75 1483">
           <span class="alternatives">
             <ins title="nlp 2.00">351</ins>
-          </span>
-        </span>
-        <span id="w_123" class="ocr_word" title="bbox 100 1438 372 1503" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διατρίβειν</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 411 1456 479 1486" lang="grc">
