--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0446.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0446.html
@@ -781,7 +781,7 @@
         </span>
         <span id="w_152" class="ocr_word" title="bbox 969 1595 1076 1662" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1122 1615 1204 1661" lang="grc">
