--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0447.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0447.html
@@ -416,7 +416,7 @@
         </span>
         <span id="w_80" class="ocr_word" title="bbox 1072 952 1182 1021" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[τίς]</ins>
+            <ins title="nlp 2.00">τίς]</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1213 956 1348 1015" lang="grc">
@@ -1445,7 +1445,7 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1252 2656 1355 2722" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1401 2663 1577 2706" lang="grc">
