--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0448.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0448.html
@@ -134,7 +134,7 @@
         </span>
         <span id="w_24" class="ocr_word" title="bbox 713 489 859 554" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(κατὰ</ins>
+            <ins title="nlp 2.00">κατὰ</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 915 510 1010 557" lang="grc">
@@ -448,7 +448,7 @@
       <span class="ocr_line" title="bbox 114 1028 1883 1102">
         <span id="w_86" class="ocr_word" title="bbox 114 1055 156 1088" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 Ἄιδος· </ins>
+            <ins title="nlp 2.00">Ἄιδος· </ins>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 403 1033 522 1086" lang="grc">
@@ -1164,14 +1164,14 @@
             <ins class="alt" title="nlp 1.00">ἀναλαβομένη</ins>
           </span>
         </span>
-        <span id="w_225" class="ocr_word" title="bbox 1789 2135 1812 2166" lang="grc">
+        <span id="w_225_0" class="ocr_word" title="bbox 1789 2135 1812 2166">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοί-</ins>
+            <ins class="alt" title="nlp 2.00">τοίνυν</ins>
           </span>
         </span>
-        <span id="w_226" class="ocr_word" title="bbox 1906 2138 1939 2170">
+        <span id="w_225_1" class="ocr_word" title="bbox 1789 2135 1812 2166">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1179,11 +1179,6 @@
         <span id="w_227" class="ocr_word" title="bbox 114 2217 156 2251">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">25</ins>
-          </span>
-        </span>
-        <span id="w_228" class="ocr_word" title="bbox 182 2216 275 2246" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νυν</ins>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 324 2195 512 2246" lang="grc">
