--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0495.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0495.html
@@ -266,14 +266,14 @@
             <ins class="alt" title="nlp 1.00">ἐλθόντα</ins>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 1693 643 1810 689" lang="grc">
+        <span id="w_49_0" class="ocr_word" title="bbox 1693 643 1810 689">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κελ-</ins>
+            <ins class="alt" title="nlp 2.00">Kεκτον</ins>
           </span>
         </span>
-        <span id="w_50" class="ocr_word" title="bbox 1836 659 1856 691">
+        <span id="w_49_1" class="ocr_word" title="bbox 1693 643 1810 689">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -281,11 +281,6 @@
         <span id="w_51" class="ocr_word" title="bbox 69 725 96 759">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_52" class="ocr_word" title="bbox 121 728 205 758" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 242 709 516 773" lang="grc">
@@ -325,16 +320,11 @@
         </span>
         <span id="w_60" class="ocr_word" title="bbox 1717 735 1811 766" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πα-</ins>
+            <ins title="nlp 2.00">παρακελευόμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 118 785 1813 855">
-        <span id="w_61" class="ocr_word" title="bbox 118 786 499 851" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρακελευόμενος</ins>
-          </span>
-        </span>
         <span id="w_62" class="ocr_word" title="bbox 537 785 603 851" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὴ</ins>
@@ -1351,16 +1341,11 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1681 2496 1806 2541" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κλει-</ins>
+            <ins title="nlp 2.00">κλεισούρος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 116 2572 1868 2641">
-        <span id="w_257" class="ocr_word" title="bbox 116 2572 297 2641" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σούρας</ins>
-          </span>
-        </span>
         <span id="w_258" class="ocr_word" title="bbox 324 2572 620 2641" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπερβῆναι,</ins>
