--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0449.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0449.html
@@ -496,14 +496,14 @@
             <ins class="alt" title="nlp 1.00">ἐλέῳ</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 1547 1056 1817 1108" lang="grc">
+        <span id="w_95_0" class="ocr_word" title="bbox 1547 1056 1817 1108">
           <span class="alternatives">
-            <ins title="nlp 2.00">συγκεραν-</ins>
+            <ins class="alt" title="nlp 2.00">συγκεραννῦσα</ins>
           </span>
         </span>
-        <span id="w_96" class="ocr_word" title="bbox 1843 1065 1884 1096">
+        <span id="w_95_1" class="ocr_word" title="bbox 1547 1056 1817 1108">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -511,11 +511,6 @@
         <span id="w_97" class="ocr_word" title="bbox 62 1136 95 1168">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_98" class="ocr_word" title="bbox 119 1127 250 1170" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">νῦσα</ins>
           </span>
         </span>
         <span id="w_99" class="ocr_word" title="bbox 296 1117 421 1169" lang="grc">
