--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0401.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0401.html
@@ -931,11 +931,6 @@
             <ins class="alt" title="nlp 2.00">αὐτοκράτορι·</ins>
           </span>
         </span>
-        <span id="w_178_1" class="ocr_word" title="bbox 763 1760 1108 1830">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_179" class="ocr_word" title="bbox 1150 1761 1247 1813" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
@@ -958,7 +953,7 @@
         </span>
         <span id="w_183" class="ocr_word" title="bbox 1584 1766 1788 1831" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἠπείρου</ins>
+            <ins title="nlp 2.00">ἠπείρου 20</ins>
           </span>
         </span>
       </span>
